# eg3d

./: .gitignore  MANIFEST.in  setup.cfg  setup.py
eg3d/: __init__.py  calc_metrics.py  environment.yml  gen_samples.py  gen_videos.py  legacy.py  train.py  visualizer.py
eg3d/gui_utils/: gl_utils.py  text_utils.py
eg3d/metrics/: metric_main.py  metric_utils.py
eg3d/torch_utils/: misc.py  persistence.py  training_stats.py
eg3d/torch_utils/ops/: bias_act.py
eg3d/training/: dataset.py  training_loop.py  triplane.py
eg3d/viz/: conditioning_pose_widget.py  latent_widget.py  pickle_widget.py  pose_widget.py  renderer.py  zoom_widget.py
