[metadata]
name = eg3d
author = Imagin4Care
author_email = stephan@imagin4care.com
url = https://imagin4care.com
description = Package of Efficient Geometry-aware 3D Generative Adversarial Networks
long_description = file:README.md
classifiers =
    Intended Audience :: Developers
	Intended Audience :: Science/Research
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: 3D Generative Adversarial Networks
	Topic :: Software Development
	Topic :: Software Development :: Libraries
	License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
platforms = Linux

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20
    click>=8.0
    pillow==8.3.1
    scipy==1.7.1
    torch==1.11.0
    cudatoolkit==11.1
    requests==2.26.0
    tqdm==4.62.2
    ninja==1.10.2
    matplotlib==3.4.2
    imageio==2.9.0
    imgui==1.3.0
    glfw==2.2.0
    pyopengl==3.1.5
    imageio-ffmpeg==0.4.3
    pyspng
    psutil
    mrcfile
    tensorboard
    setuptools>=50.3.0

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,venv,.venv,.tox,.eggs,*.egg-info

