[metadata]
name = eg3d
author = Imagin4Care
author_email = stephan@imagin4care.com
url = https://imagin4care.com
description = Package of Efficient Geometry-aware 3D Generative Adversarial Networks
long_description = file:README.md
classifiers =
    Intended Audience :: Developers
	Intended Audience :: Science/Research
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: 3D Generative Adversarial Networks
	Topic :: Software Development
	Topic :: Software Development :: Libraries
	License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
platforms = Linux

[options]
packages = find:
python_requires = >=3.8

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,venv,.venv,.tox,.eggs,*.egg-info

